--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,266 +1,6 @@
-/****************** VARIABLES ********************/
-
-$base: rgb(104, 220, 255);
-$baseComplement: complement($base);
-$baseLight: lighten($base, 20%);
-$baseLightest: lighten($base, 28%);
-$baseDark: darken($base, 20%);
-
-/************* GENERAL *********************/
-
-body {
-    position: absolute;
-    margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    width: 100%;
-    min-height: 100vh;
-    background-color: $baseLightest;
-}
-
-.main-header {
-    padding: 5px 0;
-    width: 95%;
-    margin: 0 auto;
-    background-color: $baseLight;
-    border: solid $baseDark 2px;
-    border-top: none;
-}
-
-.banner {
-    margin: 0;
-    text-align: center;
-}
-
-.wrapper {
-    width: 100%;
-    margin: 10px 0 0 0;
-}
-
-.searchBar {
-    margin: auto;
-    width: 100%;
-    min-width: 100px;
-    input {
-        font-family: 'Montserrat', sans-serif;
-        font-size: 1.5rem;
-        height: 2rem;
-        width: 80%;
-        max-width: 380px;
-        margin: 10px auto;
-        display: block;
-        background-color: #e0e0e0;
-        border-radius: 5%;
-    }
-}
-
-/******************** IMAGE GALLERY *************************/
-
-.hide {
-    display: none;
-}
-
-#imageGallery {
-    width: 90%;
-    margin: 0 auto;
-    
-    li {
-        width: 80%;
-        float: left;
-        list-style: none;
-        margin: 10px auto;
-        
-        .standard:nth-child(n + 1),
-        .show:nth-child(n + 1) {
-            clear: left;
-        }
-    }
-    
-    img {
-        display: block;
-        border: $baseComplement solid 3px;
-        border-radius: 10%;
-        width: 70%;
-        height: 70%;
-        max-width: 240px;
-        max-height: 240px;
-        margin: 0 auto;
-    }
-    
-    li:nth-child(2n) img {
-        border-color: $base;
-    } 
-}
-
-/********************** FOOTER ********************/
-
-footer {
-    width: 95%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    bottom: -32.5px;
-    left: 50%;
-    padding: 5px 0;
-    background-color: $baseLight;
-    border: solid $baseDark 2px;
-
-    ul {
-        padding: 0;
-        text-align: center;
-        margin: auto;
-        
-        li {
-            list-style: none;
-            display: inline-block;
-            
-            a.social {
-              display: inline-block;
-              text-indent: -9999px;
-              width: 30px;
-              height: 30px;
-              background-size: 30px 30px;
-              opacity: .4;
-            }
-            
-            a.twitter {
-              background-image: url(../img/twitter.svg);
-            }
-
-            a.github {
-              background-image: url(../img/github.svg);
-            }        
-        }
-    }   
-    
-    span {
-        display: block;
-        text-align: center;
-        margin: 0 auto;
-    }
-}
-
-/*************** OVERLAY *********************/
-
-#overlay {
-  background: rgba(0,0,0,0.7);
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: none;
-  text-align: center;
-    
-  img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border: solid $baseLight 8px;
-    border-radius: 10%;
-    width: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 125px;
-    min-height: 125px;
-    max-width: 250px;
-    max-height: 250px;
-    transition: all 0.5s;
-   }
-    
-   .overlayButton {
-        position: absolute;
-        transform: scale(3);
-        color: white;
-        border: none;
-        background-color: rgba(255, 255, 255, 0); 
-        transform: translate(-50%, -50%) scale(3);
-    }
-    
-   #prev {
-        top: 50%;
-        left: 10%;       
-    }
-
-   #next {
-        top: 50%;
-        right: 10%;
-    }
-
-   #close {
-        top: 10%;
-        right: 10%;
-    }
-    
-   p {
-        font-weight: 800;
-        font-size: 1.5rem;
-        position: absolute;
-        transform: translate(-50%, -50%);
-        top: 70%;
-        left: 50%;
-        color: white;
-        width: 100%;
-    }
-}
-
-/******************** MEDIA QUERIES ***************************/
-
-@media screen and (min-width: 660px) {   
-    #overlay p {
-        font-size: 2rem;
-    }
-    
-    #imageGallery{
-        width: 80%;
-        
-        li {
-            width: 50%;
-
-            .standard:nth-child(n + 1),
-            .show:nth-child(n + 1) {
-                clear: none;
-            }
-
-            .standard:nth-child(2n + 1),
-            .show:nth-child(2n + 1) {
-                clear: left;
-            }
-        }
-    }       
-}
-
-@media screen and (min-width: 960px) {
-    #imageGallery li {
-        width: 33%;
-        
-        .standard:nth-child(2n + 1),
-        .show:nth-child(2n + 1) {
-            clear: none;
-        }
-        
-        .standard:nth-child(3n + 1),
-        .show:nth-child(3n + 1) {
-            clear: left;
-        }
-    }
-}
-
-@media screen and (min-width: 1150px) {
-    #imageGallery li {
-        width: 25%;
-        
-        .standard:nth-child(3n + 1),
-        .show:nth-child(3n + 1) {
-            clear: none;
-        }
-        
-        .standard:nth-child(4n + 1),
-        .show:nth-child(4n + 1) {
-            clear: left;
-        }
-    }
-}
-
-.clearfix {
-  content: "";
-  display: table;
-  clear: both;
-}
+@import 'partials/variables';
+@import 'partials/general';
+@import 'partials/footer';
+@import 'partials/overlay';
+@import 'partials/imageGallery';
+@import 'partials/mediaQueries';
