--- a/scss/partials/_imageGallery.scss
+++ b/scss/partials/_imageGallery.scss
@@ -7,9 +7,11 @@
     margin: 0 auto;
     margin-bottom: 63.2px;
     
+    padding: 0;
+    
     li {
         width: 80%;
-        float: left;
+        float: center;
         list-style: none;
         margin: 10px auto;
         
