--- a/scss/partials/_overlay.scss
+++ b/scss/partials/_overlay.scss
@@ -25,11 +25,16 @@
     
    .overlayButton {
         position: absolute;
-        transform: scale(3);
         color: white;
         border: none;
         background-color: rgba(255, 255, 255, 0); 
         transform: translate(-50%, -50%) scale(3);
+        transition: 0.5s ease;
+       
+        &:hover {
+          color: $baseComplement;
+          transform: translate(-50%, -50%) scale(3.4); 
+        }
     }
     
    #prev {
@@ -39,12 +44,12 @@
 
    #next {
         top: 50%;
-        right: 10%;
+        right: 5%;
     }
 
    #close {
         top: 10%;
-        right: 10%;
+        right: 5%;
     }
     
    p {
